# UDS_Simulator

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  requirements.txt  utils.py
DIDs/: did_database.json  users.json
client/: uds_client.py
common/: db_handler.py  type_defs.py  uds_constants.py
ecu/: ecu_simulator.py
ui/: login_window.py  main_window.py
